kubernetes/apps/media/maintainerr/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maintainerr
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: maintainerr
      app.kubernetes.io/instance: maintainerr
      app.kubernetes.io/controller: maintainerr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: maintainerr
        app.kubernetes.io/instance: maintainerr
        app.kubernetes.io/controller: maintainerr
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: app
          image: ghcr.io/maintainerr/maintainerr:3.20.1@sha256:ce7ff52afa146dfc05c2c2304df8141e0086f14a803bdbef0d870e5b914f0dee
          ports:
            - name: http
              containerPort: 6246
          startupProbe:
            httpGet:
              path: /
              port: 6246
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe: &probe
            httpGet:
              path: /
              port: 6246
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          readinessProbe: *probe
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1000Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: config
              mountPath: /opt/data
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: maintainerr
