kubernetes/apps/media/maintainerr/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maintainerr
spec:
  ports:
    - name: http
      port: 6246
      targetPort: 6246
      protocol: TCP
  selector:
    app.kubernetes.io/name: maintainerr
    app.kubernetes.io/instance: maintainerr
    app.kubernetes.io/controller: maintainerr
